GUI-6164 fix z-index of sup ticket modal tooltips

--- a/assets/stylesheets/less/partials/basic.less
+++ b/assets/stylesheets/less/partials/basic.less
@@ -1610,6 +1610,10 @@ input[type=number]::-webkit-outer-spin-button {
     }
 }
 
+.tooltip.highZindex {
+    z-index: @z-index-locked + 4;
+}
+
 // for tooltip fade in animation
 .fade {
     opacity:0;
